# libddcci

./: .gitignore  CMakeLists.txt  README.md  config.h.in
example/: CMakeLists.txt
example/ddcci/: CMakeLists.txt  main.c
src/: CMakeLists.txt
